--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,28 @@ header h1 {
 header p {
     margin-top: 5px;
 }
+nav {
+    display: flex;
+    justify-content: space-around; /* Optional: Justify-Content für gleichmäßigen Abstand */
+    background-color: #333;
+    padding: 10px;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+nav li {
+    margin-right: 10px;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+}
 
 section {
     padding: 40px;
